# CodeAgent

./: .gitignore  CHANGELOG.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: test.yml
agents/: .gitignore  __init__.py  base.py  main.py  plugin_server.py  specialized.py
examples/: audit_existing_code.py  fastapi_endpoint.py
tests/: test_base_agent.py  test_deployer.py  test_specialized.py
