[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "codeagent-mcp"
version = "0.1.1"
description = "Self-healing SDLC pipeline as an MCP plugin — generate, review, debug, and deploy code autonomously."
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
    "fastmcp>=2.0.0",
    "mcp>=1.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.2",
]

[project.scripts]
codeagent = "agents.plugin_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
